[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-ping"
version = "0.1.3"
description = "Intent-based discovery and communication protocol with TIBET provenance. ICMP replacement with identity, trust, and context."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "J. van de Meent", email = "jasper@humotica.com"},
    {name = "R. AI", email = "root_idd@humotica.nl"},
]
keywords = [
    "tibet", "jis", "ping", "discovery", "intent", "iot",
    "mesh", "provenance", "trust", "airlock", "vouching",
    "beacon", "bootstrap", "hub", "pod", "station"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
dependencies = [
    "tibet-core>=0.2.0",
]

[project.optional-dependencies]
overlay = ["tibet-overlay>=0.1.1"]
dev = ["pytest>=7.0"]

[project.scripts]
tibet-ping = "tibet_ping.cli:main"

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-ping"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_ping"]
