[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-ping"
version = "0.3.2"
description = "Intent-based ping with TIBET provenance — protocol, UDP transport, LAN discovery, ClusterMux diagnostics, and full stack health checks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "J. van de Meent", email = "jasper@humotica.com"},
    {name = "R. AI", email = "root_idd@humotica.nl"},
]
keywords = [
    "tibet", "jis", "ping", "discovery", "intent", "iot",
    "mesh", "provenance", "trust", "airlock", "vouching",
    "beacon", "mux", "diagnostics", "health-check", "cluster"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
dependencies = [
    "tibet-core>=0.2.0",
]

[project.optional-dependencies]
msgpack = ["msgpack>=1.0"]
overlay = ["tibet-overlay>=0.1.1"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
tibet-ping = "tibet_ping.cli:main"
tping = "tibet_ping.cli:main"
tibet-iot = "tibet_ping.cli:main"

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-ping"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_ping"]
